--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
+    "eslint": "^8.22.0",
     "express": "^4.18.1",
-    "ping": "^0.4.2"
+    "ping": "^0.4.2",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.6",
+    "@types/ping": "^0.4.1"
   }
 }
