--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
-    "ping": "^0.4.2"
+    "ping": "^0.4.2",
+    "surrealdb.js": "^0.3.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
